--- a/WorkshopVR/Assembly-CSharp.csproj
+++ b/WorkshopVR/Assembly-CSharp.csproj
@@ -62,6 +62,11 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Scripts\Items\Item.cs" />
+    <Compile Include="Assets\Scripts\Items\StructureItem.cs" />
+    <Compile Include="Assets\Scripts\Missions\MissionManager.cs" />
+    <Compile Include="Assets\Scripts\Missions\StructureMission.cs" />
+    <Compile Include="Assets\Scripts\TestCollect.cs" />
     <Compile Include="Assets\SteamVR\Extras\SteamVR_GazeTracker.cs" />
     <Compile Include="Assets\SteamVR\Extras\SteamVR_LaserPointer.cs" />
     <Compile Include="Assets\SteamVR\Extras\SteamVR_Teleporter.cs" />
